Fix the layout issue

--- a/front-end/css/place-order.css
+++ b/front-end/css/place-order.css
@@ -68,3 +68,7 @@ main > section:first-child {
     padding: 5px;
     border-radius: 8px;
 }
+
+#frm-order button {
+    min-width: 130px;
+}
